ДЗ№5 6) Анимация выезжающих меню опций при нажатии FAB через ObjectAnimator и View.animate.

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -35,6 +35,10 @@
             android:id="@+id/navigation_seven"
             android:icon="@drawable/ic_baseline_shuffle_24"
             android:title="@string/title_navigation_seven" />
+        <item
+            android:id="@+id/navigation_eight"
+            android:icon="@drawable/ic_baseline_smart_button_24"
+            android:title="@string/title_navigation_eight" />
 
     </group>
 
