--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -39,6 +39,10 @@
             android:id="@+id/navigation_eight"
             android:icon="@drawable/ic_baseline_smart_button_24"
             android:title="@string/title_navigation_eight" />
+        <item
+            android:id="@+id/navigation_nine"
+            android:icon="@drawable/ic_baseline_list_alt_24"
+            android:title="@string/title_navigation_nine" />
 
     </group>
 
