--- a/app/src/main/res/menu/menu_bottom_appbar.xml
+++ b/app/src/main/res/menu/menu_bottom_appbar.xml
@@ -6,10 +6,17 @@
         android:icon="@drawable/ic_baseline_arrow_upward_24_w"
         android:title="@string/picture_description_show"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/app_bar_recycler"
+        android:icon="@drawable/ic_baseline_sports_soccer_24"
+        android:title="@string/recycler"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/app_bar_setting"
         android:icon="@drawable/ic_settings_menu"
         android:title="@string/settings"
         app:showAsAction="ifRoom" />
+
+
 </menu>
