--- a/app/src/main/res/layout/activity_recycler_item_mars.xml
+++ b/app/src/main/res/layout/activity_recycler_item_mars.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivMars"
@@ -43,10 +44,46 @@
         app:layout_constraintTop_toBottomOf="@id/addItemIV"
         app:srcCompat="@drawable/ic_archive" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/moveItemUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/layout_margin"
+        app:srcCompat="@drawable/ic_baseline_arrow_upward_24"
+        app:layout_constraintBottom_toBottomOf="@id/ivMars"
+        app:layout_constraintEnd_toStartOf="@id/addItemIV"
+        app:layout_constraintStart_toEndOf="@id/ivMars"
+        app:layout_constraintTop_toTopOf="@id/ivMars"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/moveItemDown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/layout_margin"
+        app:srcCompat="@drawable/ic_baseline_arrow_downward_24"
+        app:layout_constraintBottom_toBottomOf="@id/ivMars"
+        app:layout_constraintEnd_toStartOf="@id/addItemIV"
+        app:layout_constraintStart_toEndOf="@id/moveItemUp"
+        app:layout_constraintTop_toTopOf="@id/ivMars"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/marsDescriptionTV"
+        android:text="@string/bonus_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/layout_margin"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivMars"/>
+
     <View
+        android:id="@+id/viewOnedp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000"
-        app:layout_constraintBottom_toBottomOf="@+id/ivMars"
+        app:layout_constraintBottom_toBottomOf="@+id/marsDescriptionTV"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
