--- a/app/src/main/res/layout/activity_recycler_item_mars.xml
+++ b/app/src/main/res/layout/activity_recycler_item_mars.xml
@@ -79,6 +79,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivMars"/>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/dragHandleIV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:tint="@color/black"
+        android:layout_margin="@dimen/layout_margin"
+        app:layout_constraintTop_toBottomOf="@id/removeItemIV"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:srcCompat="@drawable/ic_hamburger_menu_bottom_bar" />
+
     <View
         android:id="@+id/viewOnedp"
         android:layout_width="match_parent"
