ДЗ№8 6) создан прототип простого Tutorial через внешнюю бибилиотеку.

--- a/app/src/main/res/menu/menu_bottom_navigation_view_ux.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view_ux.xml
@@ -11,5 +11,11 @@
         android:title="@string/fragment_ux_button"
         android:tooltipText="@string/fragment_ux_button" />
 
+    <item
+        android:id="@+id/fragment_ux_tutorial"
+        android:icon="@drawable/ic_baseline_device_unknown_24"
+        android:title="@string/fragment_ux_tutorial"
+        android:tooltipText="@string/fragment_ux_tutorial" />
+
 
 </menu>
